Add configuration support for the number of twitts per column and site theme settings.

--- a/src/pages/Configuration/Configuration.scss
+++ b/src/pages/Configuration/Configuration.scss
@@ -24,3 +24,12 @@
 .TweetCount_input {
   width: 100px;
 }
+
+.SaveConfigurationButton {
+  margin-top: 20px;
+  width: 250px;
+}
+
+.ColumnOrderContainer {
+  margin-top: 20px;
+}
