--- a/src/components/TwitterUser/TwitterUser.scss
+++ b/src/components/TwitterUser/TwitterUser.scss
@@ -1,9 +1,9 @@
 .TwitterUser {
-  background: #dcdcdc;
+  background: #cccccc;
   border-radius: 16px;
   cursor: pointer;
   display: inline-block;
-  font-size: 20px;
+  font-size: 15px;
   line-height: 24px;
   margin: 3px 5px 3px 0;
   padding: 3px 10px;
