--- a/src/pages/Wireframe/Wireframe_blackTheme.scss
+++ b/src/pages/Wireframe/Wireframe_blackTheme.scss
@@ -1,11 +1,12 @@
 .TitleContainer {
   display: flex;
   justify-content: center;
-  background-color: #0084B4;
+  background-color: black;
 }
 
 .Title {
   font-size: 40px;
+  color: #0084B4;
 }
 
 .LinkContainer {
